package com.seproje.hospital.personel.randevu;

import com.seproje.hospital.auth.AuthUserRepository;

public interface RandevuGorevlisiRepository extends AuthUserRepository<RandevuGorevlisi> {
}
